# DLWTrustTheModelBros

./: .env.example  .gitignore  AGENTS.md  README.md  syllabus.json  vision.md
.github/: pull_request_template.md
artifacts/: mvp-v4-quiz-changes.patch  sim-material-20260303-020910.md  sim-material-20260303-021235.md
data/: sentinel-runtime.json  sentinel-session-context.json  state.json
docs/: integration-contract.md  overlay-test-journey.md  parallel-dev.md  sentinel-ui-vision.md
fixtures/: capture-request.v1.json  quiz-submit.v1.json  state-response.v1.json
scripts/: bootstrap-portable.ps1  bootstrap.ps1  mock_bridge.py  overlay_journey_report.py  retag_documents.py  run-bridge-portable.ps1  run-bridge.ps1  run-demo-stack.ps1  run-laplace-mock-flow.py  run-mission-control-portable.ps1  run-mission-control.ps1  run-module-bound-mock-flow.py  run-overlay-journey.ps1  run-scoratic-prompt-flow.py  run-sentinel-portable.ps1  run-sentinel.ps1  run-topic-bound-mock-flow.py  seed_demo_courses.py  sentinel_brain (1).py  smoke_check.py  summarize-ui-prompt-flow.py  validate_contract_fixtures.py
services/bridge-api/: README.md  pyproject.toml  requirements.txt
services/bridge-api/app/: azure_clients.py  config.py  friend_agent_adapter.py  grounding.py  main.py  models.py  module_matching.py  module_models.py  module_store.py  openai_clients.py  prompting.py  quiz_seeding.py  readiness.py  scoratic_agent_adapter.py  sentinel_runtime.py  sentinel_session_context_store.py  sse.py  state_store.py  topic_matching.py  topic_models.py  topic_store.py
(+270 files in other folders)
